add resource resolution and SLF4J, change Resource to an abstract class, add runtimes